[tool.poetry]
name = "flake8_prometheus"
version = "0.1.0"
description = ""
authors = ["perminovs"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^3.7.9"
prometheus_client = "^0.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
